# astock

./: .gitignore  README.md  SETUP.md  proxies.txt  pyproject.toml  requirements.txt  working_proxies.txt
config/: config.yaml
data/A-Share/2026/: A-Share_SH_600036_daily_kline.csv  A-Share_SH_600519_daily_kline.csv  A-Share_SH_600941_daily_kline.csv  A-Share_SH_601288_daily_kline.csv  A-Share_SH_601318_daily_kline.csv  A-Share_SH_601398_daily_kline.csv  A-Share_SH_601857_daily_kline.csv  (+3 more)
docs/: async-plan.md  feat-calc-pct.md  feat-init-data-v01.md  feat-refactor-phase1.md  feat-refactor-phase2.md  feat-refactor-phase3.md  market-prd.md  phrase1.md  tencent-hist-migration-design.md  tencent-hist-test-plan.md  tencent_finance_api_reference.md
src/: constants.py  main.py
src/core/: analyzer.py  config_loader.py  logger.py  storage.py
src/core/storage/: base.py  (+2 more)
src/data_sources/: akshare_source.py  base.py  futu_source.py  manager.py  tencent_source.py  yfinance_source.py
src/models/: __init__.py  kline.py  market.py
src/trading_calendar/: checker.py
src/workflows/: __init__.py  base.py  calc_metrics.py  init_history.py  sync_daily.py
test_data_init/A-Share/: 000001.csv
tests/: debug_snapshot.py  debug_tencent_hist.py  proxy_state.json  test_akshare_continuous.py  test_futu_source_manual.py  test_init_workflow.py  test_proxy.sh  test_recent_days.py  test_refactor_phase3.py  test_tencent_pytest.py  test_tencent_source.py  test_trading_calendar_checker.py  working_proxies.json  working_proxies.txt
tests/manual/: compare_sources.py  test_tencent_source.py
(+24 files in other folders)
